--- a/app/src/main/res/layout/item_guest.xml
+++ b/app/src/main/res/layout/item_guest.xml
@@ -40,10 +40,10 @@
         android:paddingBottom="4dp" />
 
     <TextView
-        android:id="@+id/guest_subscription"
+        android:id="@+id/guest_balance"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Подписка"
+        android:text="Balance"
         android:textSize="16sp"
         android:paddingBottom="8dp" />
 
