--- a/app/src/main/res/layout/activity_view_memorial.xml
+++ b/app/src/main/res/layout/activity_view_memorial.xml
@@ -265,7 +265,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="8dp"
-                        android:text="Отправить на модерацию"
+                        android:text="Отправить на публикацию"
                         android:textAllCaps="false"
                         style="@style/Widget.MaterialComponents.Button" />
 
