--- a/app/src/main/res/drawable/ic_family_tree.xml
+++ b/app/src/main/res/drawable/ic_family_tree.xml
@@ -4,7 +4,32 @@
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24">
+    <!-- Tree trunk -->
     <path
-        android:fillColor="#FF000000"
-        android:pathData="M12,2C6.48,2 2,6.48 2,12s4.48,10 10,10 10,-4.48 10,-10S17.52,2 12,2zM12,20c-4.41,0 -8,-3.59 -8,-8s3.59,-8 8,-8 8,3.59 8,8 -3.59,8 -8,8zM12,6c-3.31,0 -6,2.69 -6,6s2.69,6 6,6 6,-2.69 6,-6 -2.69,-6 -6,-6zM12,16c-2.21,0 -4,-1.79 -4,-4s1.79,-4 4,-4 4,1.79 4,4 -1.79,4 -4,4z"/>
+        android:fillColor="#795548"
+        android:pathData="M11,14h2v8h-2z"/>
+    <!-- Tree branches -->
+    <path
+        android:fillColor="#8D6E63"
+        android:pathData="M12,14l-3,-2h6z"/>
+    <path
+        android:fillColor="#8D6E63"
+        android:pathData="M12,10l-2,-1.5h4z"/>
+    <!-- Tree leaves/crown -->
+    <path
+        android:fillColor="#4CAF50"
+        android:pathData="M12,2c-4,0 -7,3 -7,7c0,2 1,4 2.5,5.5c1.5,1.5 3.5,2.5 4.5,2.5s3,-1 4.5,-2.5C17.5,13 19,11 19,9C19,5 16,2 12,2z"/>
+    <!-- Small leaves on branches -->
+    <path
+        android:fillColor="#66BB6A"
+        android:pathData="M8,11c-0.5,0 -1,-0.5 -1,-1s0.5,-1 1,-1s1,0.5 1,1S8.5,11 8,11z"/>
+    <path
+        android:fillColor="#66BB6A"
+        android:pathData="M16,11c-0.5,0 -1,-0.5 -1,-1s0.5,-1 1,-1s1,0.5 1,1S16.5,11 16,11z"/>
+    <path
+        android:fillColor="#66BB6A"
+        android:pathData="M6,13c-0.5,0 -1,-0.5 -1,-1s0.5,-1 1,-1s1,0.5 1,1S6.5,13 6,13z"/>
+    <path
+        android:fillColor="#66BB6A"
+        android:pathData="M18,13c-0.5,0 -1,-0.5 -1,-1s0.5,-1 1,-1s1,0.5 1,1S18.5,13 18,13z"/>
 </vector> 
