--- a/app/src/main/res/drawable/ic_memorial.xml
+++ b/app/src/main/res/drawable/ic_memorial.xml
@@ -4,7 +4,27 @@
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24">
+    <!-- Monument base -->
     <path
-        android:fillColor="#FF000000"
-        android:pathData="M12,2L2,7v10l10,5 10,-5V7L12,2zM12,4.3l7.5,3.7v7.5L12,19.3l-7.5,-3.8V8L12,4.3z"/>
+        android:fillColor="#616161"
+        android:pathData="M3,20h18v2H3z"/>
+    <!-- Monument steps -->
+    <path
+        android:fillColor="#757575"
+        android:pathData="M5,18h14v2H5z"/>
+    <path
+        android:fillColor="#9E9E9E"
+        android:pathData="M7,16h10v2H7z"/>
+    <!-- Monument main column -->
+    <path
+        android:fillColor="#BDBDBD"
+        android:pathData="M9,4h6v12H9z"/>
+    <!-- Eternal flame on top -->
+    <path
+        android:fillColor="#FF5722"
+        android:pathData="M12,2c-1,0 -1.5,1 -1,2c0.5,1 1,1.5 1,2.5c0,-1 0.5,-1.5 1,-2.5C13.5,3 13,2 12,2z"/>
+    <!-- Decorative element -->
+    <path
+        android:fillColor="#9E9E9E"
+        android:pathData="M10,8h4v1h-4z"/>
 </vector> 
