--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -19,6 +19,9 @@
         <action
             android:id="@+id/action_familyTreesListFragment_to_createFamilyTreeFragment"
             app:destination="@id/createFamilyTreeFragment" />
+        <action
+            android:id="@+id/action_familyTreesListFragment_to_genealogyTreeFragment"
+            app:destination="@id/genealogyTreeFragment" />
     </fragment>
 
     <fragment
@@ -26,6 +29,15 @@
         android:name="ru.sevostyanov.aiscemetery.fragments.CreateFamilyTreeFragment"
         android:label="CreateFamilyTreeFragment"
         tools:layout="@layout/fragment_create_family_tree" />
+
+    <fragment
+        android:id="@+id/genealogyTreeFragment"
+        android:name="ru.sevostyanov.aiscemetery.fragments.GenealogyTreeFragment"
+        android:label="Генеалогическое дерево">
+        <argument
+            android:name="treeId"
+            app:argType="long" />
+    </fragment>
 
     <fragment
         android:id="@+id/mapFragment"
