--- a/app/src/main/res/layout/item_memorial.xml
+++ b/app/src/main/res/layout/item_memorial.xml
@@ -168,16 +168,19 @@
             
         <TextView
             android:id="@+id/text_pending_changes"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
-            android:textSize="13sp"
+            android:layout_marginTop="6dp"
+            android:padding="6dp"
+            android:textSize="12sp"
             android:textColor="@color/red"
+            android:background="@drawable/background_warning"
             android:drawablePadding="4dp"
             android:visibility="gone"
+            app:layout_constraintStart_toStartOf="@id/text_name"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/text_editor_indicator"
-            tools:text="⚠️ Ожидает подтверждения изменений"
+            tools:text="⚠️ На модерации (редактирование недоступно)"
             tools:visibility="visible"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
